# WebHW7

./: config.ini  my_select.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: dbc57af6dee5_init.py
database/: db.py  models.py
