[tool.poetry]
name = "webhw7"
version = "0.1.0"
description = ""
authors = ["Anton Kalchenko  <anton11042002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
faker = "^19.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
